[package]
name = "abx2xml"
version = "0.1.2"
edition = "2024"
authors = ["rhythmcache"]
description = "Rust Library to Decode Android Binary XML (ABX)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rhythmcache/abx2xml-rs"
keywords = ["xml", "android", "abx2xml", "converter", "abx"]
categories = ["parsing", "command-line-utilities"]

[[bin]]
name = "abx2xml"
path = "src/main.rs"

[lib]
name = "abx2xml"
path = "src/lib.rs"

[profile.release]
opt-level = "z" 
lto = true     
codegen-units = 1 
strip = true  
panic = "abort"
incremental = false

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive"] }
hex = "0.4.3"
thiserror = "2.0.17"
